--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
    <meta name="viewport"
          content="width=device-width, initial-scale=1">
    <meta name="description"
-         content="Portfolio webpage of Vinay Somawat" />
+         content="Portfolio webpage of Healix Loo" />
    <meta name="keywords"
          content="portfolio,website,personal website,github,projects,computer science and engineering" />
    <meta name="author"
-         content="Vinay Somawat" />
+         content="Healix Loo" />
    <!--------------------Social Media icons------------------------>
    <link rel="stylesheet"
          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -141,7 +141,7 @@
                         </div>
                         <div class="col">
                            <div class="github-card"
-                                username="vinaysomawat"></div>
+                                username="healixloo"></div>
                         </div>
                      </div>
                   </div>
