--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                <div class="author-img">
                   <img alt="profile-img" src="images/logo.png">
                </div>
-               <h1 id="colorlib-logo"><a href="./index.html">Vinay
-                     Somawat</a>
+               <h1 id="colorlib-logo"><a href="./index.html">Healix
+                     Loo</a>
                </h1>
                <p><b>Engineering @Shiprocket</b></p>
             </div>
