--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                       data-animate-effect="fadeInLeft">
                      <li>
                         <div class="link">
-                           <p style="margin-bottom: 0px">Web Projects</p>
+                           <p style="margin-bottom: 0px">Current Projects</p>
                            <i class="fa fa-chevron-down"></i>
                         </div>
                         <ul id="web-projects"
@@ -171,7 +171,7 @@
                      </li>
                      <li>
                         <div class="link">
-                           <p style="margin-bottom: 0px">Software Projects
+                           <p style="margin-bottom: 0px">Application Projects
                            </p>
                            <i class="fa fa-chevron-down"></i>
                         </div>
@@ -181,7 +181,7 @@
                      </li>
                      <li>
                         <div class="link">
-                           <p style="margin-bottom: 0px">Android Projects
+                           <p style="margin-bottom: 0px">3DMed Projects
                            </p>
                            <i class="fa fa-chevron-down"></i>
                         </div>
@@ -191,7 +191,7 @@
                      </li>
                      <li>
                         <div class="link">
-                           <p style="margin-bottom: 0px">Freelance Projects
+                           <p style="margin-bottom: 0px">BGI Projects
                            </p>
                            <i class="fa fa-chevron-down"></i>
                         </div>
