--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                <h1 id="colorlib-logo"><a href="./index.html">Healix
                      Loo</a>
                </h1>
-               <p><b>Engineering @Shiprocket</b></p>
+               <p><b>healixloo@gmail.com</b></p>
             </div>
             <nav id="colorlib-main-menu"
                  role="navigation"
@@ -274,7 +274,7 @@
                      <div class="about-desc">
                         <h1>Contact</h1>
                      </div>
-                     <p>Please feel welcome to contact me via email at vinaysomawat40@gmail.com. Whether you would like
+                     <p>Please feel welcome to contact me via email at healixloo@gmail.com. Whether you would like
                         to discuss a technology, a business opportunity, or simply say hello, I would be delighted to
                         hear from you.
                      </p>
