--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                         </ul>
                      </li>
                      <a class="readmore"
-                        href="https://vinaysomawat.medium.com/"
+                        href="https://medium.com/@healixloo"
                         target="_blank">
                         <p>Read more &RightArrow;</p>
                      </a>
